--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-<<<<<<< HEAD
   "name": "s",
   "version": "1.0.0",
-  "description": "",
-=======
-  "name": "git_project",
-  "version": "1.0.0",
   "description": "Git Group Project",
->>>>>>> d407d2c45347e6fa904a108500a8bcf8d4dcc692
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/laczynskik/Group-Project.git"
-  },
-<<<<<<< HEAD
-  "author": "",
-=======
-  "keywords": [
-    "git"
-  ],
   "author": "Karol Łączyński",
->>>>>>> d407d2c45347e6fa904a108500a8bcf8d4dcc692
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/laczynskik/Group-Project/issues"
-  },
-  "homepage": "https://github.com/laczynskik/Group-Project#readme"
+  "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-error-notifier": "^1.1.0",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-plumber-notifier": "0.0.3",
+    "gulp-sass": "^3.1.0"
+  }
 }
+sssss
