--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s",
+  "name": "",
   "version": "1.0.0",
   "description": "Git Group Project",
   "main": "index.js",
@@ -19,4 +19,3 @@
     "gulp-sass": "^3.1.0"
   }
 }
-sssss
