--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-cli": "^1.3.0",
     "gulp-error-notifier": "^1.1.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
